--- a/ILA-IOS-Exam/Base.lproj/Main.storyboard
+++ b/ILA-IOS-Exam/Base.lproj/Main.storyboard
@@ -14,41 +14,68 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="TableViewController" customModule="SearchTableViewExample" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="804"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hXD-xl-RwS">
-                                <rect key="frame" x="0.0" y="232" width="414" height="572"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                            </tableView>
-                            <searchBar contentMode="redraw" id="zMA-fl-mcR">
-                                <rect key="frame" x="-2" y="188" width="416" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </searchBar>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uAw-RO-Ji0">
-                                <rect key="frame" x="-20" y="-10" width="454" height="208"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TlA-PP-NZU">
+                                <rect key="frame" x="-40" y="18" width="494" height="898"/>
                                 <subviews>
-                                    <pageControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="gHI-DI-AqZ">
-                                        <rect key="frame" x="20" y="20" width="414" height="168"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </pageControl>
+                                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="uAw-RO-Ji0">
+                                        <rect key="frame" x="20" y="-10" width="454" height="238"/>
+                                        <subviews>
+                                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="gHI-DI-AqZ">
+                                                <rect key="frame" x="20" y="20" width="414" height="198"/>
+                                            </pageControl>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="gHI-DI-AqZ" firstAttribute="centerY" secondItem="uAw-RO-Ji0" secondAttribute="centerY" id="3vV-E6-e87"/>
+                                            <constraint firstItem="gHI-DI-AqZ" firstAttribute="top" secondItem="eGy-bK-iy3" secondAttribute="top" constant="20" id="YfK-WS-pP0"/>
+                                            <constraint firstAttribute="bottom" secondItem="gHI-DI-AqZ" secondAttribute="bottom" constant="20" id="heZ-MU-Qgb"/>
+                                            <constraint firstItem="gHI-DI-AqZ" firstAttribute="leading" secondItem="eGy-bK-iy3" secondAttribute="leading" constant="20" id="vTC-Zk-1xf"/>
+                                            <constraint firstItem="gHI-DI-AqZ" firstAttribute="centerX" secondItem="uAw-RO-Ji0" secondAttribute="centerX" id="z3t-3E-XqV"/>
+                                            <constraint firstAttribute="trailing" secondItem="gHI-DI-AqZ" secondAttribute="trailing" constant="20" id="zkE-oP-NJx"/>
+                                        </constraints>
+                                        <viewLayoutGuide key="contentLayoutGuide" id="H54-rg-Rdp"/>
+                                        <viewLayoutGuide key="frameLayoutGuide" id="eGy-bK-iy3"/>
+                                    </scrollView>
+                                    <searchBar contentMode="redraw" id="zMA-fl-mcR">
+                                        <rect key="frame" x="38" y="218" width="416" height="44"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </searchBar>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" bouncesZoom="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hXD-xl-RwS">
+                                        <rect key="frame" x="40" y="262" width="414" height="586"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </tableView>
                                 </subviews>
-                                <viewLayoutGuide key="contentLayoutGuide" id="H54-rg-Rdp"/>
-                                <viewLayoutGuide key="frameLayoutGuide" id="eGy-bK-iy3"/>
+                                <constraints>
+                                    <constraint firstItem="uAw-RO-Ji0" firstAttribute="leading" secondItem="ez6-jQ-DHh" secondAttribute="leading" constant="20" id="6zR-nu-zJN"/>
+                                    <constraint firstItem="hXD-xl-RwS" firstAttribute="top" secondItem="uAw-RO-Ji0" secondAttribute="bottom" constant="34" id="FqM-9s-Vcg"/>
+                                    <constraint firstItem="ez6-jQ-DHh" firstAttribute="bottom" secondItem="hXD-xl-RwS" secondAttribute="bottom" constant="20" id="Nz2-sg-BaF"/>
+                                    <constraint firstItem="uAw-RO-Ji0" firstAttribute="top" secondItem="ez6-jQ-DHh" secondAttribute="top" constant="20" id="b5E-cL-mcH"/>
+                                    <constraint firstItem="hXD-xl-RwS" firstAttribute="top" secondItem="zMA-fl-mcR" secondAttribute="bottom" id="gXn-Rx-m9R"/>
+                                    <constraint firstItem="uAw-RO-Ji0" firstAttribute="centerX" secondItem="TlA-PP-NZU" secondAttribute="centerX" id="kyX-AY-C6R"/>
+                                    <constraint firstAttribute="bottom" secondItem="hXD-xl-RwS" secondAttribute="bottom" constant="20" id="pnL-E6-bkl"/>
+                                    <constraint firstItem="hXD-xl-RwS" firstAttribute="trailing" secondItem="zMA-fl-mcR" secondAttribute="trailing" id="rGG-pN-c75"/>
+                                    <constraint firstAttribute="trailing" secondItem="uAw-RO-Ji0" secondAttribute="trailing" constant="20" id="rgo-zM-6Mn"/>
+                                    <constraint firstItem="uAw-RO-Ji0" firstAttribute="centerX" secondItem="hXD-xl-RwS" secondAttribute="centerX" id="wPa-2o-Jxg"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="uIc-9R-NKH"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="ez6-jQ-DHh"/>
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="hXD-xl-RwS" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Fw0-5h-dje"/>
-                            <constraint firstAttribute="bottom" secondItem="hXD-xl-RwS" secondAttribute="bottom" id="bji-C0-63r"/>
-                            <constraint firstItem="hXD-xl-RwS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="hdD-hI-HAK"/>
-                            <constraint firstItem="hXD-xl-RwS" firstAttribute="top" secondItem="zMA-fl-mcR" secondAttribute="bottom" id="wu5-7M-IxQ"/>
+                            <constraint firstItem="TlA-PP-NZU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bry-Sy-aOs"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="TlA-PP-NZU" secondAttribute="bottom" constant="-54" id="jXU-aX-l6R"/>
+                            <constraint firstItem="TlA-PP-NZU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-60" id="p0c-JE-iCP"/>
+                            <constraint firstItem="TlA-PP-NZU" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="-30" id="wu0-1U-0XM"/>
                         </constraints>
                     </view>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
                     <navigationItem key="navigationItem" title="Search Countries" id="tVe-XL-vtQ"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="pageControl" destination="gHI-DI-AqZ" id="qsh-iY-lzK"/>
                         <outlet property="scrollView" destination="uAw-RO-Ji0" id="h0R-YR-jg2"/>
@@ -66,11 +93,11 @@
             <objects>
                 <viewController id="T2x-JI-Oss" customClass="DetailsViewController" customModule="SearchTableViewExample" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="oOP-ES-hF8">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="804"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Selected Country" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YLF-GE-28L">
-                                <rect key="frame" x="20" y="372" width="374" height="26"/>
+                                <rect key="frame" x="20" y="442" width="374" height="26"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
