--- a/ILA-IOS-Exam/Base.lproj/Main.storyboard
+++ b/ILA-IOS-Exam/Base.lproj/Main.storyboard
@@ -123,10 +123,9 @@
         <!--Navigation Controller-->
         <scene sceneID="gPR-jU-bzI">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="hOQ-5u-SPf" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="hOQ-5u-SPf" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="h5L-0z-G0J">
-                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <color key="barTintColor" red="0.73725490199999999" green="0.1333333333" blue="0.29411764709999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
